# organicmaps

./: .gitmodules  CMakeLists.txt  CMakePresets.json  configure.sh  vcpkg.json
.github/workflows/: build-cmake.yaml
3party/: CMakeLists.txt
3party/vulkan_wrapper/: CMakeLists.txt
base/: CMakeLists.txt  string_utils.cpp  string_utils.hpp
cmake/: OmimHelpers.cmake  OmimTesting.cmake
coding/: CMakeLists.txt  sha1.cpp
dev_sandbox/: CMakeLists.txt  main.cpp
drape/: CMakeLists.txt  dynamic_texture.hpp  framebuffer.hpp  gl_functions.cpp  texture.hpp  texture_manager.hpp
drape/drape_tests/: CMakeLists.txt
generator/: search_index_builder.cpp
indexer/: CMakeLists.txt  categories_holder.cpp  drules_include.hpp  kayak.cpp  search_string_utils.cpp
libs/base/: CMakeLists.txt  file_name_utils.cpp  logging.cpp  random.hpp  string_utils.cpp  string_utils.hpp  timegm.cpp
libs/coding/: sha1.cpp
libs/drape/: harfbuzz_shaping.cpp
libs/indexer/: CMakeLists.txt  search_string_utils.cpp
libs/platform/: CMakeLists.txt  measurement_utils.cpp  platform.cpp
libs/routing/: turns.cpp
libs/search/: latlon_match.cpp
libs/std/: windows.hpp
libs/testing/: testingmain.cpp
platform/: CMakeLists.txt  http_client_curl.cpp  location_service.cpp  measurement_utils.cpp  platform.cpp  qt_location_service.cpp
qt/: CMakeLists.txt  OrganicMaps.manifest  main.cpp  mainwindow.cpp  mainwindow.hpp
qt/qt_common/: map_widget.cpp  (+1 more)
search/: latlon_match.cpp
std/: windows.hpp
testing/: testingmain.cpp
transit/world_feed/world_feed_integration_tests/: CMakeLists.txt
(+11 files in other folders)
